# horizon-security-platform

./: .gitignore  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/workflows/: docs.yml  publish-docker.yml  publish-npm.yml  publish-synapse.yml  signal-horizon-preflight.yml  signal-horizon-quality.yml
apps/signal-horizon/: BUG_HUNTING.md  CODE_ANALYSIS.md  Dockerfile  README.md
apps/synapse-client/: README.md  package.json  project.json
apps/synapse-pingora/: .gitignore  Cargo.toml  Dockerfile  README.md  audit-report.md  config.bench.yaml  config.example.yaml  config.horizon.yaml  config.integration.yaml  config.load.yaml  config.schema.json  config.sites.yaml  config.yaml  justfile  package.json  project.json  test.sh
apps/synapse-pingora/fuzz/: Cargo.toml
apps/synapse-pingora/fuzz/fuzz_targets/: dlp_scanner.rs  waf_engine.rs  waf_rules.rs
backlog/tasks/: task-33 - Preserve-full-verdict-metadata-in-non-blocking-deferred-WAF-merge.md  task-37 - Decouple-schema-violation-threshold-test-from-default-severity-scores.md  task-38 - Add-unit-tests-for-nested-condition-deferred-rule-tagging.md  task-40 - Runtime-verify-Pingora-403-classification-for-deferred-WAF-block-path.md  task-41 - Prevent-schema-learner-from-training-on-WAF-blocked-request-bodies.md  task-45 - Restore-237-production-WAF-rules-from-archive.md  task-46 - Author-production-rules-for-JA4-JA4H-DLP-schema-signal-match-kinds.md  (+22 more)
docs/: NAVIGATOR.md
site/: .gitignore  horizon.html  index.md  package-lock.json  package.json
site/.vitepress/: config.mts
(+896 files in other folders)
