[package]
name = "synapse-pingora-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
synapse-pingora = { path = "..", package = "synapse-waf" }

[dependencies.arbitrary]
version = "1"
features = ["derive"]

[[bin]]
name = "waf_rules"
path = "fuzz_targets/waf_rules.rs"
test = false
doc = false

[[bin]]
name = "dlp_scanner"
path = "fuzz_targets/dlp_scanner.rs"
test = false
doc = false
